Fix formatter (#13)